fullSandbox11072023/force-app/main/default/objects/Programs__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Key</label>
    <length>3</length>
    <type>Text</type>
</CustomField>