fullSandbox11072023/force-app/main/default/objects/Programs__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Unit__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acute Dialysis Catheters</fullName>
            </value>
            <value>
                <fullName>Acute HD</fullName>
            </value>
            <value>
                <fullName>All Canadian Products</fullName>
            </value>
            <value>
                <fullName>Arterial Catheters</fullName>
            </value>
            <value>
                <fullName>Arterials</fullName>
            </value>
            <value>
                <fullName>Atomization</fullName>
            </value>
            <value>
                <fullName>AutoFuser</fullName>
            </value>
            <value>
                <fullName>Cardiac</fullName>
            </value>
            <value>
                <fullName>Cardiac Wires</fullName>
            </value>
            <value>
                <fullName>Chlorag+ard/A5 PICC</fullName>
            </value>
            <value>
                <fullName>Chocolate/Glider</fullName>
            </value>
            <value>
                <fullName>Complex PCI</fullName>
            </value>
            <value>
                <fullName>CVC</fullName>
            </value>
            <value>
                <fullName>CVC/PSI/MAC</fullName>
            </value>
            <value>
                <fullName>Endurance</fullName>
            </value>
            <value>
                <fullName>Epidurals</fullName>
            </value>
            <value>
                <fullName>EZBlocker</fullName>
            </value>
            <value>
                <fullName>EZ-IO</fullName>
            </value>
            <value>
                <fullName>FlexBlock</fullName>
            </value>
            <value>
                <fullName>FlexTip</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Guideliner</fullName>
            </value>
            <value>
                <fullName>Implanted Ports</fullName>
            </value>
            <value>
                <fullName>ISO-Gard</fullName>
            </value>
            <value>
                <fullName>JACC</fullName>
            </value>
            <value>
                <fullName>Laryngoscopy</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>LMA Airways</fullName>
            </value>
            <value>
                <fullName>LMA Gastro</fullName>
            </value>
            <value>
                <fullName>LMA MADgic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>