fullSandbox11072023/force-app/main/default/objects/Programs__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Education Program Request</fullName>
            </value>
            <value>
                <fullName>CMA Speaker Request</fullName>
            </value>
            <value>
                <fullName>Live Education Program Request</fullName>
            </value>
            <value>
                <fullName>Online Education Program Request</fullName>
            </value>
            <value>
                <fullName>Strategic Vascular Education Programs</fullName>
            </value>
            <value>
                <fullName>Inservice Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>