fullSandbox11072023/force-app/main/default/objects/Programs__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Live Training</fullName>
            </value>
            <value>
                <fullName>LMS - Online Course</fullName>
            </value>
            <value>
                <fullName>LMS - Webinar</fullName>
            </value>
            <value>
                <fullName>Strategic Vascular</fullName>
            </value>
            <value>
                <fullName>Speaking Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>