fullSandbox11072023/force-app/main/default/objects/Programs__c/listViews/Active_VA_Programs.listView-meta.xml
<ListView>
    <fullName>Active_VA_Programs</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Products__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>VA</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active VA Programs</label>
    <sharedTo>
        <role>Teleflex_Global_IT</role>
        <role>Vascular_Clinical_Manager</role>
    </sharedTo>
</ListView>