fullSandbox11072023/force-app/main/default/objects/Programs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Products__c</columns>
    <columns>Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <role>Teleflex_Global_IT</role>
        <roleAndSubordinates>Clinical_Affairs_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>