fullSandbox11072023/force-app/main/default/objects/Programs__c/listViews/EMS_All.listView-meta.xml
<ListView>
    <fullName>EMS_All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Products__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>EMS</value>
    </filters>
    <label>EMS: All</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Anesthesia_President</roleAndSubordinates>
        <roleAndSubordinates>Clinical_Affairs_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>