fullSandbox11072023/force-app/main/default/objects/Programs__c/listViews/INTV_Programs.listView-meta.xml
<ListView>
    <fullName>INTV_Programs</fullName>
    <columns>NAME</columns>
    <columns>Products__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>IA</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2019 12:00 AM</value>
    </filters>
    <label>INTV Programs</label>
</ListView>