fullSandbox11072023/force-app/main/default/objects/Programs__c/listViews/VA_CMA_Speaker.listView-meta.xml
<ListView>
    <fullName>VA_CMA_Speaker</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Products__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>VA</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Speaker Program</value>
    </filters>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>CMA Speaking Engagement</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>VA: CMA Speaker</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Clinical_Affairs_Manager</roleAndSubordinates>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>