fullSandbox11072023/force-app/main/default/objects/Programs__c/listViews/VA_Strategix_Marketing.listView-meta.xml
<ListView>
    <fullName>VA_Strategix_Marketing</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Program_Type__c</columns>
    <columns>Products__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>VA</value>
    </filters>
    <filters>
        <field>Program_Type__c</field>
        <operation>equals</operation>
        <value>Strategic Vascular Education Programs</value>
    </filters>
    <label>VA: Strategic Vascular Marketing</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Vascular_President</roleAndSubordinates>
    </sharedTo>
</ListView>